Fixed flex display of gallery and alignment

--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -7,5 +7,5 @@
 #gallery-grid {
   display: flex;
   flex-wrap: wrap;
-  text-align: left;
+  justify-content: left;
 }
